Update the sidebar to include page navigation button; Change the mobile mode to a fixed topbar; Move footer copyright to the bottom of content; Combine main css and sidebar css.

--- a/layouts/_default/terms.html
+++ b/layouts/_default/terms.html
@@ -1,6 +1,6 @@
 {{ partial "header.html" . }}
-
-<div class="header">
+<div id="content-wrapper">
+<div id="header" class="header">
   <h1>{{ .Title }}</h1>
 </div>
 <div class="content">
@@ -14,5 +14,5 @@
   {{ end }}
   </ul>
 </div>
-
+</div>
 {{ partial "footer.html" . }}
