--- a/layouts/indexes/post.html
+++ b/layouts/indexes/post.html
@@ -1,6 +1,6 @@
 {{ partial "header.html" . }}
-
-<div class="header">
+<div id="content-wrapper">
+<div id="header" class="header">
   <h1>{{ .Title }}</h1>
 </div>
 <div class="content">
@@ -13,5 +13,5 @@
   </ul>
   {{ end }}
 </div>
-
+</div>
 {{ partial "footer.html" . }}
