--- a/layouts/partials/brand.html
+++ b/layouts/partials/brand.html
@@ -1,6 +1,6 @@
 <div id="brand">
-    <a class="pure-menu-heading brand" href="/">
-        <span><img id="logo" src="/img/logo.svg"></span>
-        <span>{{ .Site.Params.brand }}</span>
+    <a href="/">
+        <img id="logo" src="/img/logo.svg">
+        <!-- <span>{{ .Site.Params.brand }}</span> -->
     </a>
 </div>
