--- a/layouts/partials/copyright.html
+++ b/layouts/partials/copyright.html
@@ -1,14 +1,15 @@
-<div class="pure-g copyright">
-  <div class="pure-u-1 pure-u-md-1-1">
-    <small>{{ .Site.Copyright | safeHTML }}<a href="/">{{ .Site.Params.author | safeHTML }}</a></small>
-  </div>
-  <div class="pure-u-1 pure-u-md-1-1">
-    <small>Powered by<a href="https://gohugo.io/" target="_blank">Hugo</a></small>
-  </div>
-  <div class="pure-u-1 pure-u-md-1-1">
-    <small>Theme by<a href="https://github.com/yoshiharuyamashita/blackburn" target="_blank">Blackburn</a></small>
-  </div>
-  <div class="pure-u-1 pure-u-md-1-1">
-    <small>Color Scheme<a href="http://ethanschoonover.com/solarized" target="_blank">Solarized</a></small>
-  </div>
+<div id="copyright">
+  <!-- <hr> -->
+  <span>
+    <small>{{ .Site.Copyright | safeHTML }}<a href="/"> {{ .Site.Params.author | safeHTML }} | </a></small>
+  </span>
+  <span>
+    <small>Powered by <a href="https://gohugo.io/" target="_blank">Hugo | </a></small>
+  </span>
+  <span>
+    <small>Theme by<a href="https://github.com/yoshiharuyamashita/blackburn" target="_blank"> Blackburn | </a></small>
+  </span>
+  <span>
+    <small>Color Scheme<a href="http://ethanschoonover.com/solarized" target="_blank"> Solarized</a></small>
+  </span>
 </div>
