--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -1,11 +1,12 @@
 {{ partial "header.html" . }}
-
-<div class="header">
+<div id="content-wrapper">
+<div id="header" class="header">
   <h1>{{ .Title }}</h1>
   <h2>{{ .Description }}</h2>
 </div>
 <div class="content">
   {{ .Content }}
+  
 </div>
-
+</div>
 {{ partial "footer.html" . }}
