--- a/layouts/index.html
+++ b/layouts/index.html
@@ -1,17 +1,18 @@
 {{ partial "header.html" . }}
-
-<div class="header">
+<div id="content-wrapper">
+<div id="header" class="header">
   <h1>{{ .Title }}</h1>
-  <h2>{{ .Site.Params.subtitle }}</h2>
+  <!-- <h2>{{ .Site.Params.subtitle }}</h2> -->
 </div>
 
 <div class="content">
-  {{ range ( .Paginate (where .Data.Pages "Type" "post")).Pages }}
+
+  {{ range .Paginator.Pages }}
     {{ .Render "summary"}}
   {{ end }}
 
   {{ partial "pagination.html" . }}
 
 </div>
-
+</div>
 {{ partial "footer.html" . }}
