--- a/layouts/partials/pagination.html
+++ b/layouts/partials/pagination.html
@@ -1,6 +1,6 @@
 {{ if or (.Paginator.HasPrev) (.Paginator.HasNext) }}
-{{ $prev := "icon-angle-circled-left"}}
-{{ $next := "icon-angle-circled-right"}}
+{{ $prev := "icon-left"}}
+{{ $next := "icon-right"}}
 <nav class="pagination" role="pagination">
   {{ if .Paginator.HasPrev }}
   <a href="{{ .Paginator.Prev.URL }}"><i class="{{ $prev }}"></i></a>
