--- a/layouts/partials/post_meta.html
+++ b/layouts/partials/post_meta.html
@@ -2,7 +2,7 @@
 
   <!-- <div> -->
     <i class="icon-calendar"></i>
-    <time>{{ with .Site.Params.dateFormat }}{{ $.Date.Format . }}{{ else }}{{ .Date.Format "02 Jan 2006, 15:04" }}{{ end }}</time>&nbsp;&nbsp;&nbsp;
+    <time>{{ with .Site.Params.dateFormat }}{{ $.Date.Format . }}{{ else }}{{ .Date.Format "02 Jan 2006, 15:04" }}{{ end }}</time>&nbsp;
   <!-- </div> -->
 
   {{ $baseUrl := .Site.BaseURL }}
@@ -13,8 +13,8 @@
   <!-- <div> -->
     <i class="icon-folder"></i>
     {{ range $k, $v := .Params.topics }}
-      <a class="post-taxonomy-topic" href="/topics/{{ . | urlize }}">{{ . }}</a>{{ if lt $k (sub $count 1) }}&nbsp;&#47;{{ end }}
-    {{ end }}&nbsp;&nbsp;&nbsp;
+      <a class="post-taxonomy-topic" href="/topics/{{ . | urlize }}">{{ . }}</a>{{ if lt $k (sub $count 1) }}&middot;{{ end }}&nbsp;
+    {{ end }}
   <!-- </div> -->
   {{ end }}
   {{ end }}
@@ -22,14 +22,7 @@
   {{ if isset .Params "tags" }}
   {{ $count := len .Params.tags }}
   {{ if gt $count 0 }}
-  <!-- <div> -->
-    <i class="icon-tags"></i>
-    {{ range $k, $v := .Params.tags }}
-      <a class="post-taxonomy-tag" href="/tags/{{ . | urlize }}">{{ . }}</a>{{ if lt $k (sub $count 1) }}&nbsp;&#47;{{ end }}
-    {{ end }}
-  <!-- </div> -->
-  {{ end }}
-  {{ end }}&nbsp;&nbsp;&nbsp;
+  <!-- <div> --><i class="icon-tags"></i> {{ range $k, $v := .Params.tags }}<a class="post-taxonomy-tag" href="/tags/{{ . | urlize }}">{{ . }}</a>{{ if lt $k (sub $count 1) }}&middot;{{ end }}{{ end }}<!-- </div> -->{{ end }}{{ end }}&nbsp;
 
   <i class='icon-chat'></i> <span class="disqus-comment-count" data-disqus-url="{{ .Permalink }}"> <!-- Count will be inserted here --> </span>
 </div>
