--- a/layouts/partials/prev_next_post.html
+++ b/layouts/partials/prev_next_post.html
@@ -2,7 +2,7 @@
 <div class="prev-next-post pure-g">
   <div class="pure-u-1-24" style="text-align: left;">
     {{ if .PrevInSection }}
-    <a href="{{ .PrevInSection.Permalink }}"> <i class="icon-angle-circled-left"> </i> </a>
+    <a href="{{ .PrevInSection.Permalink }}"> <i class="icon-left"> </i> </a>
     {{ end }}
   </div>
   <div class="pure-u-10-24">
@@ -24,7 +24,7 @@
   </div>
   <div class="pure-u-1-24" style="text-align: right;">
     {{ if .NextInSection }}
-    <a href="{{ .NextInSection.Permalink }}"><i class="icon-angle-circled-right"></i></a>
+    <a href="{{ .NextInSection.Permalink }}"><i class="icon-right"></i></a>
     {{ end }}
   </div>
 </div>
