--- a/layouts/partials/social.html
+++ b/layouts/partials/social.html
@@ -75,7 +75,7 @@
 
     {{ with .Site.Social.linkedin }}
     <li class="pure-menu-item">
-      <a class="pure-menu-link" href="https://linkedin.com/in/{{ . }}" target="_blank"><i class="icon-linkedin-squared"></i>LinkedIn</a>
+      <a class="pure-menu-link" href="https://linkedin.com/in/{{ . }}" target="_blank"><i class="icon-linkedin-squared"></i></a>
     </li>
     {{ end }}
 
@@ -103,7 +103,7 @@
 
     {{ with .Site.Social.github }}
     <li class="pure-menu-item">
-      <a class="pure-menu-link" href="https://github.com/{{ . }}" target="_blank"><i class="icon-github-squared"></i>GitHub</a>
+      <a class="pure-menu-link" href="https://github.com/{{ . }}" target="_blank"><i class="icon-github-squared"></i></a>
     </li>
     {{ end }}
 
@@ -120,7 +120,7 @@
     {{ end }}
 
     <li class="pure-menu-item">
-      <a class="pure-menu-link" href="{{ .Site.BaseURL }}index.xml"><i class="icon-rss-squared"></i>RSS</a>
+      <a class="pure-menu-link" href="{{ .Site.BaseURL }}index.xml"><i class="icon-rss-squared"></i></a>
     </li>
 
   </ul>
