--- a/layouts/post/single.html
+++ b/layouts/post/single.html
@@ -1,19 +1,14 @@
 {{ partial "header.html" . }}
 
-<div class="header">
+{{ partial "toc.html" . }}
+<div id="content-wrapper">
+<div id="header" class="header">
   <h1>{{ .Title }}</h1>
   <!-- <h2>{{ .Description }}</h2> -->
 </div>
 <div class="content">
 
   {{ partial "post_meta.html" . }}
-
-  {{ if not .Params.notoc }}
-    <div id="toc" class="pure-u-2-5">
-    {{ .TableOfContents }}
-    </div>
-  {{ end }}
-
 
   {{ .Content }}
 
@@ -22,5 +17,5 @@
   {{ partial "disqus.html" . }}
 
 </div>
-
+</div>
 {{ partial "footer.html" . }}
