--- a/static/css/fontello.css
+++ b/static/css/fontello.css
@@ -1,11 +1,11 @@
 @font-face {
   font-family: 'fontello';
-  src: url('https://yuji.im/static/fonts/fontello.eot?95889401');
-  src: url('https://yuji.im/static/fonts/fontello.eot?95889401#iefix') format('embedded-opentype'),
-       url('https://yuji.im/static/fonts/fontello.woff2?95889401') format('woff2'),
-       url('https://yuji.im/static/fonts/fontello.woff?95889401') format('woff'),
-       url('https://yuji.im/static/fonts/fontello.ttf?95889401') format('truetype'),
-       url('https://yuji.im/static/fonts/fontello.svg?95889401#fontello') format('svg');
+  src: url('https://yuji.im/static/fonts/fontello.eot?62441592');
+  src: url('https://yuji.im/static/fonts/fontello.eot?62441592#iefix') format('embedded-opentype'),
+       url('https://yuji.im/static/fonts/fontello.woff2?62441592') format('woff2'),
+       url('https://yuji.im/static/fonts/fontello.woff?62441592') format('woff'),
+       url('https://yuji.im/static/fonts/fontello.ttf?62441592') format('truetype'),
+       url('https://yuji.im/static/fonts/fontello.svg?62441592#fontello') format('svg');
   font-weight: normal;
   font-style: normal;
 }
@@ -15,7 +15,7 @@
 @media screen and (-webkit-min-device-pixel-ratio:0) {
   @font-face {
     font-family: 'fontello';
-    src: url('https://yuji.im/static/fonts/fontello.svg?95889401#fontello') format('svg');
+    src: url('https://yuji.im/static/fonts/fontello.svg?62441592#fontello') format('svg');
   }
 }
 */
@@ -66,6 +66,9 @@
 .icon-linkedin-squared:before { content: '\e808'; } /* '' */
 .icon-github-squared:before { content: '\e809'; } /* '' */
 .icon-rss-squared:before { content: '\e80a'; } /* '' */
-.icon-angle-circled-left:before { content: '\e80b'; } /* '' */
-.icon-angle-circled-right:before { content: '\e80c'; } /* '' */
+.icon-left:before { content: '\e80b'; } /* '' */
+.icon-right:before { content: '\e80c'; } /* '' */
 .icon-chat:before { content: '\e80d'; } /* '' */
+.icon-up:before { content: '\e80e'; } /* '' */
+.icon-down:before { content: '\e80f'; } /* '' */
+.icon-box:before { content: '\e810'; } /* '' */
