--- a/static/css/blackburn.css
+++ b/static/css/blackburn.css
@@ -508,6 +508,105 @@ This is the parent `<div>` that contains the menu and the content area.
 }
 
 
+/* Animation */
+
+/*
+Add transition to containers so they can push in and out.
+*/
+
+#layout,
+#nav {
+    -webkit-transition: all 0.2s ease-out;
+    -moz-transition: all 0.2s ease-out;
+    -ms-transition: all 0.2s ease-out;
+    -o-transition: all 0.2s ease-out;
+    transition: all 0.2s ease-out;
+}
+
+#TableOfContents {
+    animation: fadein 0.2s;
+    -moz-animation: fadein 0.2s;
+    /* Firefox */
+    -webkit-animation: fadein 0.2s;
+    /* Safari and Chrome */
+    -o-animation: fadein 0.2s;
+}
+
+.nav-inner .blog-item {
+    animation: fadein 0.6s;
+    -moz-animation: fadein 0.6s;
+    /* Firefox */
+    -webkit-animation: fadein 0.6s;
+    /* Safari and Chrome */
+    -o-animation: fadein 0.6s;
+    /* Opera */
+}
+
+.nav-inner .self-item {
+    animation: fadein 0.8s;
+    -moz-animation: fadein 0.8s;
+    /* Firefox */
+    -webkit-animation: fadein 0.8s;
+    /* Safari and Chrome */
+    -o-animation: fadein 0.8s;
+    /* Opera */
+}
+
+.nav-inner .social {
+    animation: fadein 1s;
+    -moz-animation: fadein 1s;
+    /* Firefox */
+    -webkit-animation: fadein 1s;
+    /* Safari and Chrome */
+    -o-animation: fadein 1s;
+    /* Opera */
+}
+
+@keyframes fadein {
+    from {
+        opacity: 0;
+    }
+    to {
+        opacity: 1;
+    }
+}
+/* Firefox */
+@-moz-keyframes fadein {
+    from {
+        opacity: 0;
+    }
+    to {
+        opacity: 1;
+    }
+}
+/* Safari and Chrome */
+@-webkit-keyframes fadein {
+    from {
+        opacity: 0;
+    }
+    to {
+        opacity: 1;
+    }
+}
+/* Internet Explorer */
+@-ms-keyframes fadein {
+    from {
+        opacity: 0;
+    }
+    to {
+        opacity: 1;
+    }
+}
+/* Opera */
+@-o-keyframes fadein {
+    from {
+        opacity: 0;
+    }
+    to {
+        opacity: 1;
+    }
+}
+
 /*
  * -- TABLET (AND UP) MEDIA QUERIES --
  * On tablets and other medium-sized devices, we want to customize some
@@ -610,104 +709,5 @@ This is the parent `<div>` that contains the menu and the content area.
         display: block;
         height: 80%;
         overflow-y: scroll;
-    }
-}
-
-/* Animation */
-
-/*
-Add transition to containers so they can push in and out.
-*/
-
-#layout,
-#nav {
-    -webkit-transition: all 0.2s ease-out;
-    -moz-transition: all 0.2s ease-out;
-    -ms-transition: all 0.2s ease-out;
-    -o-transition: all 0.2s ease-out;
-    transition: all 0.2s ease-out;
-}
-
-#toc {
-    animation: fadein 0.3s;
-    -moz-animation: fadein 0.3s;
-    /* Firefox */
-    -webkit-animation: fadein 0.3s;
-    /* Safari and Chrome */
-    -o-animation: fadein 0.3s;
-}
-
-.nav-inner .blog-item {
-    animation: fadein 0.6s;
-    -moz-animation: fadein 0.6s;
-    /* Firefox */
-    -webkit-animation: fadein 0.6s;
-    /* Safari and Chrome */
-    -o-animation: fadein 0.6s;
-    /* Opera */
-}
-
-.nav-inner .self-item {
-    animation: fadein 0.8s;
-    -moz-animation: fadein 0.8s;
-    /* Firefox */
-    -webkit-animation: fadein 0.8s;
-    /* Safari and Chrome */
-    -o-animation: fadein 0.8s;
-    /* Opera */
-}
-
-.nav-inner .social {
-    animation: fadein 1s;
-    -moz-animation: fadein 1s;
-    /* Firefox */
-    -webkit-animation: fadein 1s;
-    /* Safari and Chrome */
-    -o-animation: fadein 1s;
-    /* Opera */
-}
-
-@keyframes fadein {
-    from {
-        opacity: 0;
-    }
-    to {
-        opacity: 1;
-    }
-}
-/* Firefox */
-@-moz-keyframes fadein {
-    from {
-        opacity: 0;
-    }
-    to {
-        opacity: 1;
-    }
-}
-/* Safari and Chrome */
-@-webkit-keyframes fadein {
-    from {
-        opacity: 0;
-    }
-    to {
-        opacity: 1;
-    }
-}
-/* Internet Explorer */
-@-ms-keyframes fadein {
-    from {
-        opacity: 0;
-    }
-    to {
-        opacity: 1;
-    }
-}
-/* Opera */
-@-o-keyframes fadein {
-    from {
-        opacity: 0;
-    }
-    to {
-        opacity: 1;
     }
 }
