update h2 for single

--- a/layouts/partials/disqus.html
+++ b/layouts/partials/disqus.html
@@ -1,6 +1,6 @@
 
 <div id="disqus_thread"></div>
-<div id="disqus-comments"><button class='pure-button' onclick="loaddisqus()"><i class='icon-chat'></i> <span class="disqus-comment-count" data-disqus-url="{{ .Permalink }}"> <!-- Count will be inserted here --> </span></button></div>
+<div id="disqus-comments"><button class='pure-button' onclick="loaddisqus()"><i class='icon-chat'></i>&nbsp;<span class="disqus-comment-count" data-disqus-url="{{ .Permalink }}"> <!-- Count will be inserted here --> </span></button></div>
 
 <script type="text/javascript">
 function loaddisqus() {
