--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -8,13 +8,13 @@
 
   <!-- CSS -->
 
-  <link rel="stylesheet" href="/css/font.css">
+<!--   <link rel="stylesheet" href="/css/font.css">
   <link rel="stylesheet" href="/css/fontello.css">
   <link rel="stylesheet" href="/css/pure-min.css">
   <link rel="stylesheet" href="/css/grids-responsive-min.css">
   <link rel="stylesheet" href="/css/blackburn.css">
-  <link href="/css/prism.css" rel="stylesheet" />
-  <!-- <link rel="stylesheet" type="text/css" href="/css/main-min.css"> -->
+  <link href="/css/prism.css" rel="stylesheet" /> -->
+  <link rel="stylesheet" type="text/css" href="/css/main-min.css">
 
   <script src="/js/prism.js">Prism.highlightAll(false);</script>  
   <!-- RSS -->
