fix the error when toc is null

--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -21,7 +21,7 @@ window.onload = function() {
         e.stopPropagation();
         nav.classList.toggle('active');
         nav_link.classList.toggle('active');
-        if (toc.classList.contains('active')) {
+        if (toc && toc.classList.contains('active')) {
                     toc.classList.toggle('active');
             }
     }
