--- a/static/css/fontello.css
+++ b/static/css/fontello.css
@@ -1,11 +1,11 @@
 @font-face {
   font-family: 'fontello';
-  src: url('https://yuji.im/static/fonts/fontello.eot?62441592');
-  src: url('https://yuji.im/static/fonts/fontello.eot?62441592#iefix') format('embedded-opentype'),
-       url('https://yuji.im/static/fonts/fontello.woff2?62441592') format('woff2'),
-       url('https://yuji.im/static/fonts/fontello.woff?62441592') format('woff'),
-       url('https://yuji.im/static/fonts/fontello.ttf?62441592') format('truetype'),
-       url('https://yuji.im/static/fonts/fontello.svg?62441592#fontello') format('svg');
+  src: url('https://yuji.im/static/fonts/fontello.eot?31732643');
+  src: url('https://yuji.im/static/fonts/fontello.eot?31732643#iefix') format('embedded-opentype'),
+       url('https://yuji.im/static/fonts/fontello.woff2?31732643') format('woff2'),
+       url('https://yuji.im/static/fonts/fontello.woff?31732643') format('woff'),
+       url('https://yuji.im/static/fonts/fontello.ttf?31732643') format('truetype'),
+       url('https://yuji.im/static/fonts/fontello.svg?31732643#fontello') format('svg');
   font-weight: normal;
   font-style: normal;
 }
@@ -15,7 +15,7 @@
 @media screen and (-webkit-min-device-pixel-ratio:0) {
   @font-face {
     font-family: 'fontello';
-    src: url('https://yuji.im/static/fonts/fontello.svg?62441592#fontello') format('svg');
+    src: url('https://yuji.im/static/fonts/fontello.svg?31732643#fontello') format('svg');
   }
 }
 */
@@ -29,7 +29,7 @@
   display: inline-block;
   text-decoration: inherit;
   width: 1em;
-  /*margin-right: .2em;*/
+/*  margin-right: .2em;*/
   text-align: center;
   /* opacity: .8; */
  
@@ -42,7 +42,7 @@
  
   /* Animation center compensation - margins should be symmetric */
   /* remove if not needed */
-  /*margin-left: .2em;*/
+/*  margin-left: .2em;*/
  
   /* you can be more comfortable with increased icons size */
   /* font-size: 120%; */
@@ -66,9 +66,10 @@
 .icon-linkedin-squared:before { content: '\e808'; } /* '' */
 .icon-github-squared:before { content: '\e809'; } /* '' */
 .icon-rss-squared:before { content: '\e80a'; } /* '' */
-.icon-left:before { content: '\e80b'; } /* '' */
-.icon-right:before { content: '\e80c'; } /* '' */
-.icon-chat:before { content: '\e80d'; } /* '' */
+.icon-chat:before { content: '\e80b'; } /* '' */
+.icon-left:before { content: '\e80c'; } /* '' */
+.icon-right:before { content: '\e80d'; } /* '' */
 .icon-up:before { content: '\e80e'; } /* '' */
-.icon-down:before { content: '\e80f'; } /* '' */
-.icon-box:before { content: '\e810'; } /* '' */
+.icon-box:before { content: '\e80f'; } /* '' */
+.icon-down:before { content: '\e810'; } /* '' */
+.icon-angle-double-right:before { content: '\e811'; } /* '' */
