--- a/static/css/blackburn.css
+++ b/static/css/blackburn.css
@@ -32,7 +32,7 @@ a:hover {
 /* Make the navigation 100% width on phones */
 
 #nav {
-    font-family: "Roboto Mono";
+    font-family: "Roboto Mono", "PingFang SC", 'Microsoft Yahei', san-serif;
     width: 100%;
     height: 40px;
     position: fixed;
@@ -407,7 +407,7 @@ blockquote cite:before {
 }
 
  small {
-    font-family: "Roboto Mono", monospace;
+    font-family: "Roboto Mono", "PingFang SC", 'Microsoft Yahei', san-serif;
  }
 
 #copyright a {
@@ -416,7 +416,7 @@ blockquote cite:before {
 
 .post-meta {
     font-size: 0.9em;
-    font-family: "Roboto Mono";
+    font-family: "Roboto Mono", "PingFang SC", 'Microsoft Yahei', san-serif;
     line-height: 1.7;
 }
 
@@ -425,7 +425,7 @@ blockquote cite:before {
 }
 
 article > footer {
-    font-family: "Roboto Mono", monospace;
+    font-family: "Roboto Mono", "PingFang SC", 'Microsoft Yahei', san-serif;
     text-align: right;
 }
 
