Fix the single page toc

--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -1,4 +1,5 @@
 {{ partial "header.html" . }}
+{{ partial "toc.html" . }}
 <div id="content-wrapper">
 <div id="header" class="header">
   <h1>{{ .Title }}</h1>
